@@ -2,6 +2,13 @@
 
 	reviewed by: Johan Dahlin  <jdahlin@async.com.br>
 
+	* kiwi/ui/entry.py: Improve focus selection support for mask in entries.
+	Fixes #2787
+
+2006-08-30  Ronaldo Maia  <romaia@async.com.br>
+
+	reviewed by: Johan Dahlin  <jdahlin@async.com.br>
+
 	* kiwi/currency.py:
 	* kiwi/datatypes.py:
 	* kiwi/enums.py:
